--- a/spyro-tribute-main.css
+++ b/spyro-tribute-main.css
@@ -207,7 +207,7 @@
     top: 10%;
     text-align: center;
     color: black;
-    background-image: url(Spyro-button.png);
+    background-image: url("https://i.ibb.co/XLpPN0J/Spyro-button.png");
     background-size: 100% 100%;
     cursor: pointer;
     font-family: Kaushan Script;
